--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
-<body>
+<body class="container">
   <app-root></app-root>
 </body>
 </html>
